[gd_scene load_steps=5 format=3 uid="uid://d2a8r6he6s8yy"]

[ext_resource type="Script" path="res://pickups/upgrades/upgrade_pickup.gd" id="1_ocel7"]
[ext_resource type="Texture2D" uid="uid://dvpqs4dayer11" path="res://icon.svg" id="1_oqwib"]
[ext_resource type="Texture2D" uid="uid://bkqs60v7jgydo" path="res://pickups/upgrades/upgradebackground.png" id="2_2tt8a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_6swik"]
radius = 14.0

[node name="UpgradePickup" type="Area2D"]
collision_layer = 64
script = ExtResource("1_ocel7")

[node name="IconBackground" type="Sprite2D" parent="."]
texture = ExtResource("2_2tt8a")

[node name="IconSprite" type="Sprite2D" parent="IconBackground"]
unique_name_in_owner = true
texture = ExtResource("1_oqwib")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_6swik")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(1.66926, 1.67764)

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
